# shell-scripts

./: LICENSE  README.md  build.sh  pyproject.toml  test.txt
.claude/: settings.local.json
tokenizer/: CLAUDE.md  README.md  main.py
