[project]
name = "tokenizer"
version = "0.1.0"
description = "A command-line token counter using tiktoken"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tiktoken>=0.8.0",
]

[project.optional-dependencies]
build = [
    "nuitka>=2.0",
]

[project.scripts]
tokenizer = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["main.py"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "nuitka>=4.0.5",
]
